# Bayesian-Sparse-Slam

./: README.md  test.py
install/: local_setup.sh  setup.sh
install/cppp/lib/cppp/: LandmarkGraphNode  LandmarkTransformermapNode  PreprocessNode  ScanTransformer
install/cppp/share/cppp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/messages/include/messages/messages/msg/: landmark_constraint.h  landmark_constraint.hpp  landmark_constraint_list.h  landmark_constraint_list.hpp  landmark_landmark_constraint.h  landmark_landmark_constraint.hpp  landmark_landmark_constraint_list.h  landmark_landmark_constraint_list.hpp  line_segment.h  line_segment.hpp  line_segment_list.h  line_segment_list.hpp  pose_constraint.h  pose_constraint.hpp  pose_graph.h  pose_graph.hpp  pose_node.h  pose_node.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/messages/share/messages/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/messages/share/messages/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_messages__rosidl_generator_cppExport.cmake  export_messages__rosidl_typesupport_fastrtps_cppExport.cmake  messagesConfig-version.cmake  messagesConfig.cmake  messages__rosidl_typesupport_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/messages/share/messages/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/messages/share/messages/msg/: LandmarkConstraint.idl  LandmarkConstraint.msg  LandmarkConstraintList.idl  LandmarkConstraintList.msg  LandmarkLandmarkConstraint.idl  LandmarkLandmarkConstraint.msg  LandmarkLandmarkConstraintList.idl  LandmarkLandmarkConstraintList.msg  LineSegment.idl  LineSegment.msg  LineSegmentList.idl  LineSegmentList.msg  PoseConstraint.idl  PoseConstraint.msg  PoseGraph.idl  PoseGraph.msg  PoseNode.idl  PoseNode.msg
install/robot_control/lib/robot_control/: dummycontrol  waypoint_publisher
install/robot_control/share/robot_control/: package.sh  package.xml
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_description/share/robot_description/cmake/: robot_descriptionConfig-version.cmake  robot_descriptionConfig.cmake
install/robot_description/share/robot_description/environment/: ament_prefix_path.dsv  path.dsv  robot_description.dsv  robot_description.sh
install/ros_bringup/share/ros_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros_bringup/share/ros_bringup/cmake/: ros_bringupConfig-version.cmake  ros_bringupConfig.cmake
install/ros_bringup/share/ros_bringup/config/: ros_bridge.yaml
install/ros_bringup/share/ros_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/ros_bringup/share/ros_bringup/launch/: Crawler.launch.py
install/ros_gazebo/share/ros_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros_gazebo/share/ros_gazebo/cmake/: ros_gazeboConfig-version.cmake  ros_gazeboConfig.cmake
install/ros_gazebo/share/ros_gazebo/environment/: ament_prefix_path.dsv  path.dsv  ros_gazebo.dsv  ros_gazebo.sh
install/ros_gazebo/share/ros_gazebo/worlds/: Crawler.sdf  Damn.sdf
install/sensor_management/lib/sensor_management/: LandmarkConstraintVisualizer  LandmarkLandmarkVisualizationNode  Linesegviz  OptiPoseViz  PoseGraphViz  PostPoseGraphViz  fusion  linesegmentvisualizer  sparsesampler
install/sensor_management/share/sensor_management/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/soma/lib/soma/: BayesianLandmarkConstraintNode  EuclidsLandmarkLandmarkGraphNode  GraphNode  KmeansClusteringNode  LandmarkConstraintVisualizer  LandmarkLandmarkGraphNode  LandmarkMapGenerator  LineSegmentAssociation  OldGraphNode  PoseGraphNode  PostProcessingNode  Ransac  SWMANode
install/soma/share/soma/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
results/: bayes.pgm  bayes.yaml  metrics_bayes.txt
src/cppp/: CMakeLists.txt
src/cppp/include/pose_graph_optimizer/: PoseGraphOptimizer.hpp
src/cppp/src/: HoughLineFittingNode.cpp  IncrementalLineFittingNode.cpp  LandmarkGraphNode.cpp  LandmarkTransformerNode.cpp  LandmarkTransformermapNode.cpp  PoseGraphOptimizer.cpp  PreprocessNode.cpp  RansacLineExtractionNode.cpp  ScanAccumulator.cpp  ScanTransformer.cpp
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: LandmarkConstraintList.msg  LandmarkLandmarkConstraint.msg  LandmarkLandmarkConstraintList.msg  LineSegment.msg  PoseConstraint.msg  PoseGraph.msg
src/robot_control/: setup.py
src/robot_control/robot_control/: dummycontrol.py  waypoint_publisher.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/models/Crawler/: model.config  model.sdf
src/robot_description/models/DummySt/: model.config  model.sdf
src/ros_bringup/: CMakeLists.txt
src/ros_bringup/config/: ros_bridge.yaml
src/ros_bringup/launch/: Crawler.launch.py
src/ros_gazebo/: CMakeLists.txt  package.xml
src/ros_gazebo/include/ros_gazebo/: BasicSystem.hh  FullSystem.hh
src/ros_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/ros_gazebo/worlds/: Crawler.sdf  Damn.sdf
src/sensor_management/: setup.py
src/sensor_management/sensor_management/: PostPoseGraphViz.py
src/soma/: package.xml  setup.cfg  setup.py
src/soma/soma/: BayesianLandmarkConstraintNode.py  OldGraphNode.py
(+162 files in other folders)
